--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,74 @@
     margin:0;
     border:none;
 }
+
+#wrapper {
+    height: 100vh;
+    width:100%;
+    background-color: aqua;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    white-space: nowrap;
+    scroll-behavior: smooth;
+}
+li {
+    height:100vh;
+    width: 100vw;
+    display: block;
+}
+.pageleft {
+    float:left;
+    height:100vh;
+    width: 40%;
+    margin: auto;
+    background-color: aliceblue;
+    display: block;
+}
+.pageright {
+    float:right;
+    height:100vh;
+    width: 40%;
+    margin: auto;
+    background-color: aliceblue;
+    display: block;
+}
+#first {
+    background-color: black;
+}
+#second {
+    background-color: grey;
+}
+#third {
+    background-color: white;
+}
+.pageleft iframe {
+    margin-top: 100px;
+    float: right;
+    width:56vw;
+    height: 31.5vw;
+    vertical-align: middle;
+    border: 2px solid grey;
+}
+.pageright iframe {
+    margin-top: 100px;
+    float: left;
+    width:56vw;
+    height: 31.5vw;
+    vertical-align: middle;
+    border: 2px solid grey;
+}
+#first-left {
+    width:60%;
+    background-color: black;
+}
+#first-right {
+    background-color: black;
+}
+#second-left {
+    background-color: white;
+}
+
+#second-right {
+    width:60%;
+    background-color:white;
+}
