--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,74 +5,74 @@
     margin:0;
     border:none;
 }
+body {
+    font-family: Archivo, sans-serif;
+    overflow:hidden;
+}
 
-#wrapper {
-    height: 100vh;
+#header-div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100vw;
+    height:100px;
+    background-color: black;
+    font-family: Roboto, sans-serif;
+    color: white;
+}
+#page-container {
+    width:100vw;
+    background-color: black;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    bottom: 100px;
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
+.page {
+    height:800px;
     width:100%;
-    background-color: aqua;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    white-space: nowrap;
-    scroll-behavior: smooth;
-}
-li {
-    height:100vh;
-    width: 100vw;
-    display: block;
-}
-.pageleft {
-    float:left;
-    height:100vh;
-    width: 40%;
-    margin: auto;
-    background-color: aliceblue;
-    display: block;
-}
-.pageright {
-    float:right;
-    height:100vh;
-    width: 40%;
-    margin: auto;
-    background-color: aliceblue;
-    display: block;
-}
-#first {
-    background-color: black;
-}
-#second {
-    background-color: grey;
-}
-#third {
     background-color: white;
 }
-.pageleft iframe {
-    margin-top: 100px;
-    float: right;
-    width:56vw;
-    height: 31.5vw;
-    vertical-align: middle;
-    border: 2px solid grey;
+#intro {
+    background-color: #921501;
 }
-.pageright iframe {
-    margin-top: 100px;
-    float: left;
-    width:56vw;
-    height: 31.5vw;
-    vertical-align: middle;
-    border: 2px solid grey;
+#intro #center {
+    margin:auto;
+    height:600px;
+    width:600px;
+    background-image: url(../images/placeholder.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-#first-left {
-    width:60%;
+footer {
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100vw;
+    height: 100px;
     background-color: black;
-}
-#first-right {
-    background-color: black;
-}
-#second-left {
-    background-color: white;
 }
 
-#second-right {
-    width:60%;
-    background-color:white;
-}
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color:black;
+  }
+  
+  /* Works on Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width:5px;
+    visibility: hidden;
+  }
+  
+  *::-webkit-scrollbar-track {
+    visibility: hidden;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color:#921501;
+    width:2px;
+    height:40px;
+  }
