--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
     width:100vw;
     background-color: black;
     position: absolute;
-    top: 70px;
+    top: 100px;
     left: 0;
     bottom: 50px;
     overflow-y:scroll;
@@ -52,12 +52,11 @@ body {
 }
 #intro #center {
     margin:auto;
-    height:500px;
-    width:336px;
+    height:90vh;
     background-image: url(../images/placeholder.png);
     background-repeat: no-repeat;
     background-size:contain;
-    background-position:bottom center;
+    background-position:center;
 }
 footer {
     position:absolute;
