--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,3 +170,11 @@ footer {
     padding-left: 15px;
     padding-top: 10px;
   }
+
+  #warning-message {
+    text-align: center;
+    color: white;
+    width: 100%;
+    height: 100%;
+    background-color: #921501;
+  }
