--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,9 +104,9 @@ footer {
 
 /* ---------page content styling--------- */
 #intro {
-    background-color: #921501;
+    background-color: #D9D9D9;
 }
-#intro #center {
+#intro #left {
     margin-left:0px;
     height:90vh;
     background-image: url(../images/placeholder.png);
@@ -114,9 +114,6 @@ footer {
     background-size:contain;
     background-position:center;
 }
-
-
-
   #right {
     border-top: 2px solid red;
     margin-top: 100px;
@@ -138,28 +135,7 @@ footer {
     font-family: Archivo, sans-serif;
     line-height: 1.3;
   }
-  #left {
-    border-top: 2px solid red;
-    margin-top: 50px;
-    width:33%;
-    float:left;
-  }
-  #left #textbox-left {
-    color: white;
-    float:right;
-    text-align: right;
-    width: 336px;
-  }
-  #textbox-left h1 {
-    text-transform: uppercase;
-    font-size: 2rem;
-    font-family: Roboto, sans-serif;
-  }
-  #textbox-left p {
-    font-size: 0.9rem;
-    font-family: Archivo, sans-serif;
-    line-height: 1.3;
-  }
+
   #about-itachi {
     background-color: black;
   }
