--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,18 +15,17 @@ body {
     top: 0;
     left: 0;
     width:100vw;
-    background-color: black;
+    background-color: #24211D;
     font-family: Roboto, sans-serif;
     color: white;
     display: inline;
-    z-index: 2;
 }
 #nav-logo {
-  text-align: center;
   float:left;
   line-height: 40px;
   font-family: Roboto;
   margin-left: 5px;
+  font-size: 180%;
 }
 #nav-menu {
   width:310px;
@@ -34,7 +33,7 @@ body {
   line-height: 40px;
 }
 #nav-div li {
-  background-color: black;
+  background-color: #24211D;
   text-transform: uppercase;
   float: right;
   margin-right: 15px;
@@ -42,6 +41,7 @@ body {
   list-style: none;
   color: white;
   transition: all 0.3s;
+  z-index: 2;
 }
 
 #nav-div li:hover {
@@ -76,7 +76,7 @@ footer {
     left:0;
     width:100vw;
     height: 50px;
-    background-color: black;
+    background-color: #24211D;
 }
 
 /* Scrollbar style for Firefox */
@@ -107,33 +107,40 @@ footer {
     background-color: #D9D9D9;
 }
 #intro #left {
-    margin-left:0px;
-    height:90vh;
-    background-image: url(../images/placeholder.png);
-    background-repeat: no-repeat;
-    background-size:contain;
-    background-position:center;
+  width:50%;
+  min-width: 320px;
+  height:100%;
+  background-image: url(../images/itachiheader.png);
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position:bottom right;
 }
   #right {
-    border-top: 2px solid red;
-    margin-top: 100px;
-    width:33%;
+    width: 50%;
+    min-width: 315px;
+    border-top: 2px solid black;
+    margin-top: 150px;
     float:right;
+    display: inline;
+    background-color:rgba(217, 217, 217, 0.95);
+    
   }
   #right #textbox-right {
-    color: white;
+    color:#24211D;
     float:left;
-    width: 336px;
+    width: 315px;
   }
   #textbox-right h1 {
     text-transform: uppercase;
     font-size: 2rem;
     font-family: Roboto, sans-serif;
+    padding: 0 2.5px 0 2.5px;
   }
   #textbox-right p {
     font-size: 0.9rem;
     font-family: Archivo, sans-serif;
     line-height: 1.3;
+    padding: 0 2.5px 0 2.5px;
   }
 
   #about-itachi {
@@ -183,19 +190,18 @@ footer {
     background-color: black;
   }
 
-  @media screen and (max-width:537px) {
+  @media screen and (max-width:612px) {
     #page-container {
       top:80px      
     }
-    #header-logo {
-      float: none;
-      margin: 0 auto;
-      font-size: 130%;
+    #nav-logo {
+      width: 100%;
+      text-align: center;
     }
-    #header-nav {
+    #nav-menu {
       width: 100%;
     }
-    #header-nav ul {
+    #nav-menur ul {
       display: flex;
       align-items: stretch; /* Default */
       justify-content: space-between;
@@ -203,11 +209,19 @@ footer {
       margin: 0;
       padding: 0;
     }
-    #header-nav li {
+    #nav-menu li {
       display: block;
       flex: 0 1 auto; /* Default */
       list-style-type: none;
       margin:0 10px;
       line-height: 40px;
     }
+  }
+
+@media screen and (max-width:562px) {
+  #right {
+    width: 100%;
+    border-bottom: 2px solid #D9D9D9;
+    border-top: 2px solid #D9D9D9;
+  }
   }
