--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,14 +144,35 @@ footer {
   }
 
   #about-itachi {
-    background-color: black;
+    background-color:#24211D;
+    text-align:center;
   }
-  iframe {
-    filter: grayscale(0%);
+  .video-card {
+    margin:10px auto;
+    display:inline-block;
+    border: 2px solid #D9D9D9;
+    color: #D9D9D9;
   }
-  iframe:hover {
-    filter: grayscale(0%);
-  }
+.iframe-wrapper {
+  width:420px;
+  height:236.25px;
+  float: right;
+}
+iframe {
+  width:420px;
+  height:236.25px;
+  float: right;
+}
+.about-textbox {
+  float:left;
+  min-width: 310px;
+  text-align: left;
+  padding-left: 3px;
+}
+
+#appears {
+  background-color: #D9D9D9;
+}
   #left-table-container {
     display: inline-block;
     color: #921501;
