--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,10 +147,20 @@ footer {
     background-color:#24211D;
     text-align:center;
   }
+#about-itachi >h1 {
+  color: #D9D9D9;
+  text-align: right;
+  text-transform: uppercase;
+  line-height: 60px;
+  font-family: Roboto;
+  margin-right: 5px;
+  font-size: 300%;
+}
+
   .video-card {
     margin:10px auto;
     display:inline-block;
-    border: 2px solid #D9D9D9;
+    border-top: 2px solid #D9D9D9;
     color: #D9D9D9;
   }
 .iframe-wrapper {
@@ -242,7 +252,7 @@ iframe {
 @media screen and (max-width:562px) {
   #right {
     width: 100%;
-    border-bottom: 2px solid #D9D9D9;
-    border-top: 2px solid #D9D9D9;
+    border-bottom: 2px solid #24211D;
+    border-top: 2px solid #24211D;
   }
   }
