--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,39 +78,6 @@ footer {
     height: 50px;
     background-color: #24211D;
 }
-/* -------Warning page--------- */
-
-#intro #warning-left {
-  width:50%;
-  min-width: 320px;
-  height:100%;
-  background-image: url(../images/firstpageitachi.png);
-  background-repeat: no-repeat;
-  background-size:contain;
-  background-position:bottom right;
-}
-  #warning-right {
-    width: 50%;
-    min-width: 315px;
-    border-top: 2px solid black;
-    margin-top: 150px;
-    float:right;
-    display: inline;
-    background-color:rgba(217, 217, 217, 0.95);
-  }
-  #warning-right #textbox-right {
-    color:red;
-    float:left;
-    width: 315px;
-  }
-  
-  #warning-right #textbox-right p {
-    color:red;
-    float:left;
-    width: 315px;
-    padding: 10px 0;
-  }
-
 /* Scrollbar style for Firefox */
 * {
   scrollbar-width: thin;
@@ -178,7 +145,7 @@ footer {
     background-color:#24211D;
     text-align:center;
   }
-#about-itachi >h1 {
+.page-title {
   color: #D9D9D9;
   text-align: right;
   text-transform: uppercase;
@@ -211,25 +178,25 @@ iframe {
   padding-left: 3px;
 }
 
-#appears {
+#episodes {
   background-color: #D9D9D9;
 }
   #left-table-container {
-    display: inline-block;
+    float: left;
     color: #921501;
-    width:40%;
+    width:50%;
     min-width:320px;
 
   }
   #right-table-container {
-    display: inline-block;
+    float: left;
     color: black;
-    width:40%;
+    width:50%;
     min-width:320px;
   }
   table {
     text-align: left;
-    padding-left: 15px;
+    padding-left: 0 15px;
   }
   
   table th{
