--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo&family=Roboto:wght@300&display=swap');
 
 * {
-    padding:0;
-    margin:0;
-    border:none;
+  padding:0;
+  margin:0;
+  border:none;
 }
 body {
-    font-family: Archivo, sans-serif;
-    overflow:hidden;
+  font-family: Archivo, sans-serif;
+  overflow:hidden;
 }
 /* ---------Top Navbar styling--------- */
 #nav-div {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width:100vw;
-    background-color: #24211D;
-    font-family: Roboto, sans-serif;
-    color: white;
-    display: inline;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width:100vw;
+  background-color: #24211D;
+  font-family: Roboto, sans-serif;
+  color: white;
+  display: inline;
 }
 #nav-logo {
   float:left;
@@ -32,21 +32,24 @@ body {
   float:right;
   line-height: 40px;
 }
+#nav-div a {
+  text-decoration: none;
+  color: inherit;
+  transition: all 0.3s;
+}
 #nav-div li {
-  background-color: #24211D;
   text-transform: uppercase;
   float: right;
-  margin-right: 15px;
+  margin-right: 10px;
   display: inline;
   list-style: none;
   color: white;
   transition: all 0.3s;
-  z-index: 2;
 }
 
 #nav-div li:hover {
   color:black;
-  background-color: white;
+  background-color: #D9D9D9;
   font-size: 105%;
   padding-left: 5px;
   padding-right: 5px;
@@ -55,28 +58,28 @@ body {
 
 /* ---------page content display area styling--------- */
 #page-container {
-    width:100vw;
-    background-color:#D9D9D9;
-    position: absolute;
-    top: 40px;
-    left: 0;
-    bottom: 50px;
-    overflow-y:scroll;
-    overflow-x:hidden;
+  width:100vw;
+  background-color:#D9D9D9;
+  position: absolute;
+  top: 40px;
+  left: 0;
+  bottom: 50px;
+  overflow-y:scroll;
+  overflow-x:hidden;
 }
 .page {
-    min-height:400px;
-    height:100%;
-    width:100%;
-    background-color: white;
+  min-height:400px;
+  height:100%;
+  width:100%;
+  background-color: white;
 }
 footer {
-    position:absolute;
-    bottom:0;
-    left:0;
-    width:100vw;
-    height: 50px;
-    background-color: #24211D;
+  position:absolute;
+  bottom:0;
+  left:0;
+  width:100vw;
+  height: 50px;
+  background-color: #24211D;
 }
 /* Scrollbar style for Firefox */
 * {
@@ -103,7 +106,7 @@ footer {
 
 /* ---------page content styling--------- */
 #intro {
-    background-color: #D9D9D9;
+  background-color: #D9D9D9;
 }
 #intro #left {
   width:50%;
@@ -114,55 +117,82 @@ footer {
   background-size:contain;
   background-position:bottom right;
 }
-  #right {
-    width: 50%;
-    min-width: 315px;
-    border-top: 2px solid black;
-    margin-top: 150px;
-    float:right;
-    display: inline;
-    background-color:rgba(217, 217, 217, 0.95);
-  }
-  #right #textbox-right {
-    color:#24211D;
-    float:left;
-    width: 315px;
-  }
-  #textbox-right h1 {
-    text-transform: uppercase;
-    font-size: 2rem;
-    font-family: Roboto, sans-serif;
-    padding: 0 2.5px 0 2.5px;
-  }
-  #textbox-right p {
-    font-size: 0.9rem;
-    font-family: Archivo, sans-serif;
-    line-height: 1.3;
-    padding: 0 2.5px 0 2.5px;
-  }
-
-  #about-itachi {
-    background-color:#24211D;
-    text-align:center;
-  }
-.page-title {
-  color: #D9D9D9;
-  text-align: right;
-  text-transform: uppercase;
-  line-height: 60px;
-  font-family: Roboto;
-  margin-right: 5px;
-  font-size: 300%;
+#right {
+  width: 50%;
+  min-width: 310px;
+  border-top: 2px solid black;
+  margin-top: 150px;
+  float:right;
+  display: inline;
+  background-color:rgba(217, 217, 217, 0.95);
 }
-
-  .video-card {
-    margin:10px auto;
-    display:inline-block;
-    padding: 2px;
-    border-radius: 3px;
-    color:#24211D;
-    background-color:#D9D9D9;
-  }
+#right #textbox-right {
+  color:#24211D;
+  float:left;
+  width: 310px;
+}
+#textbox-right h1 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-family: Roboto, sans-serif;
+  padding: 0 2.5px 0 2.5px;
+}
+#textbox-right p {
+  font-size: 0.9rem;
+  font-family: Archivo, sans-serif;
+  line-height: 1.3;
+  padding: 0 2.5px 0 2.5px;
+}
+#about-itachi {
+  background-color:#24211D;
+  text-align:center;
+  color:#D9D9D9;
+}
+.page-title-container {
+  width:100%;
+}
+h1 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-family: Roboto, sans-serif;
+  padding: 0 2.5px 0 2.5px;
+}
+p {
+  font-size: 0.9rem;
+  font-family: Archivo, sans-serif;
+  line-height: 1.3;
+  padding: 0 2.5px 0 2.5px;
+  max-width: 310px;
+}
+.page-title {
+  float:right;
+  width: 55%;
+  text-align: left;
+  margin-top: 20px;
+  border-top: 2px solid;
+  min-width: 310px;
+}
+.page-title h1 {
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-family: Roboto, sans-serif;
+  padding: 0 2.5px 0 2.5px;
+}
+.page-title p {
+  text-align: left;
+  width: 55%;
+  text-align: left;
+  min-width: 310px;
+  height:100px;
+}
+.video-card {
+  margin:10px auto;
+  display:inline-block;
+  padding: 2px;
+  border-radius: 3px 3px 20px 3px;
+  color:#24211D;
+  background-color:#D9D9D9;
+}
 #pseudo-iframe {
   background-image: url(../images/pseudoplaceholder.png);
   background-size:contain;
@@ -178,7 +208,15 @@ iframe {
   width:420px;
   height:236.25px;
   float: right;
-  border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 20px 0;
+  filter: grayscale(50%);
+}
+iframe:hover {
+  width:420px;
+  height:236.25px;
+  float: right;
+  border-radius: 0 3px 20px 0;
+  filter: grayscale(0%);
 }
 .about-textbox {
   float:left;
@@ -189,103 +227,109 @@ iframe {
 
 #episodes {
   background-color: #D9D9D9;
+  color: #24211D;
 }
-  #left-table-container {
-    float: left;
-    color: #921501;
-    width:50%;
-
-  }
-  #right-table-container {
-    float: right;
-    color: black;
-    width:50%;
-  }
-  table {
-    text-align: left;
-    padding: 0 15px 0 0;
-    margin-bottom: 20px;
-  }
+#left-table-container {
+  float: left;
+  color: #921501;
+  width:100%;
+}
+#right-table-container {
+  float: left;
+  color: #24211D;
+  width:100%;
+}
+table {
+  text-align: left;
+  padding: 10px;
+  margin: 10px auto;
+  max-width: 785px;
+}
   
-  table th{
-    text-align: left;
-    vertical-align: bottom;
-    padding-left: 15px;
-  }
-  table td{
-    text-align: left;
-    vertical-align: top;
-    padding-left: 15px;
-    padding-top: 10px;
-  }
+table th{
+  text-align: left;
+  vertical-align: bottom;
+  padding-left: 15px;
+}
+th h1 {
+  text-align: left;
+  vertical-align: bottom;
+  padding-left: 0px;
+}
+table td{
+  text-align: left;
+  vertical-align: top;
+  padding-left: 15px;
+  padding-top: 10px;
+ font-size: 0.9rem;
+  font-family: Archivo, sans-serif;
+  line-height: 1.3;
+}
+#warning-message {
+  text-align: center;
+  color: white;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
 
-  #warning-message {
-    text-align: center;
-    color: white;
+@media screen and (max-width:612px) {
+  #page-container {
+    top:80px      
+  }
+  #nav-logo {
     width: 100%;
-    height: 100%;
-    background-color: black;
+    text-align: right;
   }
-
-  @media screen and (max-width:1010px) {
-    
-  #right-table-container {
-    float: left;
-    color: black;
-    width:100%;
-    min-width:320px;
-  } 
-  #left-table-container {
-    float: left;
-    color: #921501;
-    width:100%;
-    min-width:320px;
-
+  #nav-menu {
+    width: 100%;
   }
-    }
-
-  @media screen and (max-width:612px) {
-    #page-container {
-      top:80px      
-    }
-    #nav-logo {
-      width: 100%;
-      text-align: center;
-    }
-    #nav-menu {
-      width: 100%;
-    }
-    #nav-menur ul {
-      display: flex;
-      align-items: stretch; /* Default */
-      justify-content: space-between;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-    }
-    #nav-menu li {
-      display: block;
-      flex: 0 1 auto; /* Default */
-      list-style-type: none;
-      margin:0 10px;
-      line-height: 40px;
-    }
+  #nav-menur ul {
+    display: flex;
+    align-items: stretch; /* Default */
+    justify-content: space-between;
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
+  #nav-menu li {
+    display: block;
+    flex: 0 1 auto; /* Default */
+    list-style-type: none;
+    margin:0 10px;
+    line-height: 40px;
+  }
+}
 
 @media screen and (max-width:562px) {
   #right {
+    width: 305px;
+    border: 2px solid #24211D;
+    border-radius: 3px 0 20px 3px;
+  }
+}
+
+@media screen and (max-width:760px) {
+  .iframe-wrapper {
+    width:280px;
+    height:157.5px;
+  }
+  iframe {
+    width:280px;
+    height:157.5px;
+  }
+}
+
+@media screen and (max-width:602px) {
+  .video-card {
+    width: 305px;
+  }
+  iframe {
+    border-radius: 3px 3px 0 0;
     width: 100%;
-    border-bottom: 2px solid #24211D;
-    border-top: 2px solid #24211D;
   }
+  .iframe-wrapper {
+    width: 100%;
   }
-  @media screen and (max-width:760px) {
-    .iframe-wrapper {
-      width:280px;
-      height:157.5px;
-    }
-    iframe {
-      width:280px;
-      height:157.5px;
-    }
-    }
+}
+
