touch up on styling based on jigsaw and w3c reports. Changed heading levels for better coherence and cleaned up obselete code.

--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -88,10 +88,11 @@ footer {
   padding: 10px 10px 10px 0;
 }
 
-#textbox-right h1 {
+#textbox-right h2 {
   text-transform: uppercase;
-  font-size: 2rem;
   font-family: Roboto, sans-serif;
+  font-size: 2.5rem;
+  padding: 0 2.5px 0 2.5px;
 }
 
 
