--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ body {
   font-family: Roboto;
   margin-left: 5px;
   font-size: 180%;
+  margin-right: 10px;
 }
 #nav-menu {
   width:310px;
@@ -73,7 +74,6 @@ body {
   min-height:400px;
   height:100%;
   width:100%;
-  background-color: white;
 }
 footer {
   position:absolute;
@@ -83,6 +83,7 @@ footer {
   height: 50px;
   background-color: #24211D;
 }
+
 /* Scrollbar style for Firefox */
 * {
   scrollbar-width: thin;
@@ -129,33 +130,13 @@ footer {
   background-color:rgba(217, 217, 217, 0.95);
 }
 #right #textbox-right {
-  color:#24211D;
+  color:black;
   float:left;
   width: 310px;
 }
-#textbox-right h1 {
+h3 {
   text-transform: uppercase;
-  font-size: 2rem;
-  font-family: Roboto, sans-serif;
-  padding: 0 2.5px 0 2.5px;
-}
-#textbox-right p {
-  font-size: 0.9rem;
-  font-family: Archivo, sans-serif;
-  line-height: 1.3;
-  padding: 0 2.5px 0 2.5px;
-}
-#about-itachi {
-  background-color:#24211D;
-  text-align:center;
-  color:#D9D9D9;
-}
-.page-title-container {
-  width:100%;
-}
-h1 {
-  text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: Roboto, sans-serif;
   padding: 0 2.5px 0 2.5px;
 }
@@ -166,6 +147,14 @@ p {
   padding: 0 2.5px 0 2.5px;
   max-width: 310px;
 }
+#about-itachi {
+  background-color:#24211D;
+  text-align:center;
+  color:#D9D9D9;
+}
+.page-title-container {
+  width:100%;
+}
 .page-title {
   float:right;
   width: 55%;
@@ -174,9 +163,9 @@ p {
   border-top: 2px solid;
   min-width: 310px;
 }
-.page-title h1 {
+h2 {
   text-transform: uppercase;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-family: Roboto, sans-serif;
   padding: 0 2.5px 0 2.5px;
 }
@@ -209,10 +198,6 @@ iframe {
   filter: grayscale(50%);
 }
 iframe:hover {
-  width:420px;
-  height:236.25px;
-  float: right;
-  border-radius: 0 3px 20px 0;
   filter: grayscale(0%);
 }
 .about-textbox {
@@ -242,16 +227,17 @@ table {
   margin: 10px auto;
   max-width: 785px;
 }
-  
+.table-head {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-family: Roboto, sans-serif;
+  padding-left: 15px;
+  padding-bottom: 5px;
+}
 table th{
   text-align: left;
   vertical-align: bottom;
   padding-left: 15px;
-}
-th h1 {
-  text-align: left;
-  vertical-align: bottom;
-  padding-left: 0px;
 }
 table td{
   text-align: left;
@@ -270,6 +256,9 @@ table td{
   #nav-logo {
     width: 100%;
     text-align: right;
+  }
+  #nav-logo h1 {
+    margin-right: 10px;
   }
   #nav-menu {
     width: 100%;
