--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,27 @@ body {
   overflow:hidden;
 }
 
+/* ---------text styling--------- */
+h2 {
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  font-family: Roboto, sans-serif;
+  padding: 0 2.5px 0 2.5px;
+}
+h3 {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-family: Roboto, sans-serif;
+  padding: 0 2.5px 0 2.5px;
+}
+p {
+  font-size: 0.9rem;
+  font-family: Archivo, sans-serif;
+  line-height: 1.3;
+  padding: 0 2.5px 0 2.5px;
+  max-width: 310px;
+}
+
 /* ---------Top Navbar styling--------- */
 #nav-div {
   position: absolute;
@@ -75,6 +96,26 @@ body {
   height:100%;
   width:100%;
 }
+
+.page-title-container {
+  width:100%;
+}
+.page-title {
+  float:right;
+  width: 55%;
+  text-align: left;
+  margin-top: 20px;
+  border-top: 2px solid;
+  min-width: 310px;
+}
+.page-title p {
+  text-align: left;
+  width: 55%;
+  text-align: left;
+  min-width: 310px;
+  height:100px;
+}
+
 footer {
   position:absolute;
   bottom:0;
@@ -107,7 +148,7 @@ footer {
 }
 
 
-/* ---------page content styling--------- */
+/* ---------page content styling, intro section--------- */
 #intro {
   background-color: #D9D9D9;
 }
@@ -134,57 +175,21 @@ footer {
   float:left;
   width: 310px;
 }
-h3 {
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-family: Roboto, sans-serif;
-  padding: 0 2.5px 0 2.5px;
-}
-p {
-  font-size: 0.9rem;
-  font-family: Archivo, sans-serif;
-  line-height: 1.3;
-  padding: 0 2.5px 0 2.5px;
-  max-width: 310px;
-}
+
+/* ---------page content styling, about section--------- */
 #about-itachi {
   background-color:#24211D;
   text-align:center;
   color:#D9D9D9;
 }
-.page-title-container {
-  width:100%;
-}
-.page-title {
-  float:right;
-  width: 55%;
-  text-align: left;
-  margin-top: 20px;
-  border-top: 2px solid;
-  min-width: 310px;
-}
-h2 {
-  text-transform: uppercase;
-  font-size: 2.5rem;
-  font-family: Roboto, sans-serif;
-  padding: 0 2.5px 0 2.5px;
-}
-.page-title p {
-  text-align: left;
-  width: 55%;
-  text-align: left;
-  min-width: 310px;
-  height:100px;
-}
 .video-card {
-  margin:10px auto;
+  margin:0 auto 20px auto;
   display:inline-block;
   padding: 2px;
   border-radius: 3px 3px 20px 3px;
   color:#24211D;
   background-color:#D9D9D9;
 }
-
 .iframe-wrapper {
   width:420px;
   height:236.25px;
@@ -207,6 +212,7 @@ iframe:hover {
   padding-left: 3px;
 }
 
+/* ---------page content styling, episopes section--------- */
 #episodes {
   background-color: #D9D9D9;
   color: #24211D;
@@ -244,7 +250,7 @@ table td{
   vertical-align: top;
   padding-left: 15px;
   padding-top: 10px;
- font-size: 0.9rem;
+  font-size: 0.9rem;
   font-family: Archivo, sans-serif;
   line-height: 1.3;
 }
@@ -259,24 +265,6 @@ table td{
   }
   #nav-logo h1 {
     margin-right: 10px;
-  }
-  #nav-menu {
-    width: 100%;
-  }
-  #nav-menur ul {
-    display: flex;
-    align-items: stretch; /* Default */
-    justify-content: space-between;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  #nav-menu li {
-    display: block;
-    flex: 0 1 auto; /* Default */
-    list-style-type: none;
-    margin:0 10px;
-    line-height: 40px;
   }
 }
 
