--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -49,6 +49,7 @@ body {
   background-color:#D9D9D9;
 }
 footer {
+  color: #D9D9D9;
   position:absolute;
   bottom:0;
   left:0;
@@ -82,16 +83,23 @@ footer {
   text-align: left;
 }
   
-#warning-right #textbox-right p {
+ p {
   color:#24211D;
   float:left;
   padding: 10px 10px 10px 0;
 }
 
-#textbox-right h2 {
+h2 {
   text-transform: uppercase;
   font-family: Roboto, sans-serif;
   font-size: 2.5rem;
+  padding: 0 2.5px 0 2.5px;
+}
+
+h4 {
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-family: Roboto, sans-serif;
   padding: 0 2.5px 0 2.5px;
 }
 
