--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,12 @@ h3 {
   font-family: Roboto, sans-serif;
   padding: 0 2.5px 0 2.5px;
 }
+h4 {
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  font-family: Roboto, sans-serif;
+  line-height: 1.5;
+}
 p {
   font-size: 0.9rem;
   font-family: Archivo, sans-serif;
@@ -117,6 +123,7 @@ p {
 }
 
 footer {
+  color: #D9D9D9;
   position:absolute;
   bottom:0;
   left:0;
