--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,11 @@ p {
   height:100px;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 footer {
   color: #D9D9D9;
   position:absolute;
@@ -142,6 +147,14 @@ footer {
   float: right;
   height: 100%;
   width: 50%;
+}
+#footer-right:hover {
+  color: black;
+  background-color: #D9D9D9;
+}
+#footer-left:hover {
+  color: black;
+  background-color: #D9D9D9;
 }
 /* Scrollbar style for Firefox */
 * {
