touch up on final styling, transitions on link hover in footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,11 +142,13 @@ footer {
   float: left;
   height: 100%;
   width: 50%;
+  transition: all 0.3s;
 }
 #footer-right {
   float: right;
   height: 100%;
   width: 50%;
+  transition: all 0.3s;
 }
 #footer-right:hover {
   color: black;
