--- a/assets/css/indexstyle.css
+++ b/assets/css/indexstyle.css
@@ -62,11 +62,21 @@ footer {
   float: left;
   height: 100%;
   width: 50%;
+  transition: all 0.3s;
 }
 #footer-right {
   float: right;
   height: 100%;
   width: 50%;
+  transition: all 0.3s;
+}
+#footer-right:hover {
+  color: black;
+  background-color: #D9D9D9;
+}
+#footer-left:hover {
+  color: black;
+  background-color: #D9D9D9;
 }
 
 /* -------Warning page--------- */
@@ -114,7 +124,10 @@ h4 {
   line-height: 2.5;
   margin: 0 15px 0 15px;
 }
-
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
 
 @media screen and (max-width:730px) {
