--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,19 +245,19 @@ iframe:hover {
   padding-left: 3px;
 }
 
-/* ---------page content styling, episopes section--------- */
+/* ---------page content styling, episodes section--------- */
 #episodes {
   background-color: #D9D9D9;
   color: #24211D;
 }
 #left-table-container {
   float: left;
-  color: #921501;
+  color: #D9D9D9;
   width:100%;
 }
 #right-table-container {
   float: left;
-  color: #24211D;
+  color: #D9D9D9;
   width:100%;
 }
 table {
@@ -265,10 +265,12 @@ table {
   padding: 10px;
   margin: 10px auto;
   max-width: 785px;
+  background-color: #921501;
+  border-radius: 3px 3px 20px 3px;
 }
 .table-head {
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-family: Roboto, sans-serif;
   padding-left: 15px;
   padding-bottom: 5px;
@@ -286,9 +288,10 @@ table td{
   font-size: 0.9rem;
   font-family: Archivo, sans-serif;
   line-height: 1.3;
+  color: white;
 }
 
-@media screen and (max-width:612px) {
+@media screen and (max-width:624px) {
   #page-container {
     top:80px      
   }
