--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,8 +99,7 @@ p {
   overflow-x:hidden;
 }
 .page {
-  min-height:400px;
-  height:100%;
+  min-height:95vh;
   width:100%;
 }
 
@@ -189,6 +188,7 @@ footer {
   width:50%;
   min-width: 320px;
   height:100%;
+  min-height: 95vh;
   background-image: url(../images/itachiheader.png);
   background-repeat: no-repeat;
   background-size:contain;
