--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,11 @@ footer {
   text-align:center;
   color:#D9D9D9;
 }
+#about-itachi-container{
+  margin: auto;
+  width: 100%;
+  max-width: 1630px;
+}
 .video-card {
   margin:0 auto 20px auto;
   display:inline-block;
@@ -308,6 +313,7 @@ table td{
     width: 305px;
     border: 2px solid #24211D;
     border-radius: 3px 0 20px 3px;
+    margin-top: 300px;
   }
 }
 
